{
    "name": "XRInputActions",
    "maps": [
        {
            "name": "XRPlayerController",
            "id": "b184b9d8-f2c5-48c2-b004-951e59670ad3",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "0f2a5884-f483-4488-a9dc-406f6cd1fead",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotate Camera",
                    "type": "Value",
                    "id": "b7552904-a3e4-46d6-be56-d45bfdba4c99",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Teleport",
                    "type": "Button",
                    "id": "89657686-d0b0-4c0c-a8bd-35d8e389e628",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "147fce46-7af8-4251-8a29-edc6a3607b2b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6c58babc-8346-44fd-a263-013ba2be3acd",
                    "path": "<XRController>{LeftHand}/joystick",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR Controller",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "5204c3f5-6287-490e-a396-33dca5909bdb",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a20007bb-3b91-4b36-8900-e27b3065f148",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse And Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "06f46a4f-3635-4c82-bae8-06cbfec6bc56",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse And Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "da047f5c-e9fb-467e-a786-62f8d99b1401",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse And Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6a1d122f-4a39-4df3-94b7-0da2be428e3d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse And Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6b69dad4-17bc-42e8-90a1-e754ecb60e30",
                    "path": "<XRController>{RightHand}/joystick",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR Controller",
                    "action": "Rotate Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d298c3a0-6ff3-4534-a2ec-bf8eb27ab404",
                    "path": "<XRController>{LeftHand}/gripPressed",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "XR Controller",
                    "action": "Teleport",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "27ffcec6-398b-4fcf-ad17-4caa90e98c18",
                    "path": "<XRController>{RightHand}/gripPressed",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "XR Controller",
                    "action": "Teleport",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ac066e2-2f0b-4b41-9494-780c80d77db8",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse And Keyboard",
                    "action": "Teleport",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e100d2c4-cdbb-4868-b7bf-1467cb98efa2",
                    "path": "<XRController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "XR Controller",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "380fc0a6-b14c-4b26-87a3-b235e579e2b3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse And Keyboard",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ffb39217-a8ec-43fb-91ce-ec7f7d53527a",
                    "path": "<XRController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "XR Controller",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "XRAvatar",
            "id": "2b68df80-9ba8-4647-8f71-43e01c813b6a",
            "actions": [
                {
                    "name": "HeadPosition",
                    "type": "Value",
                    "id": "71a60397-ced9-4cec-8aa8-317db317651e",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HeadRotation",
                    "type": "Value",
                    "id": "6295540b-9c0e-4196-8b98-c0b19dd91bd9",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftHandPosition",
                    "type": "Value",
                    "id": "6ae2193e-fade-459b-bcb9-a5480a2d0064",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftHandRotation",
                    "type": "Value",
                    "id": "ecc2688e-0cb3-4c23-bfd4-0a6cd80b036b",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightHandPosition",
                    "type": "Value",
                    "id": "4445c19f-03ae-4df6-b498-5a56febffe43",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightHandRotation",
                    "type": "Value",
                    "id": "2cc67f94-d411-4137-a860-efb3cc94220b",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b337c8f3-0add-4579-b20d-176759a7918e",
                    "path": "<XRHMD>/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeadPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3bf688f3-588a-42cd-8968-934e41cd9723",
                    "path": "<XRHMD>/deviceRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeadRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "49e51485-5be3-4b32-b5be-4c9dff4af8fb",
                    "path": "<XRController>{LeftHand}/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHandPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "810d6bbe-cc98-4dc3-b76f-da9cb9718a48",
                    "path": "<XRController>{LeftHand}/deviceRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHandRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "de7c9245-7b6f-4c98-96bf-3e77cde813c4",
                    "path": "<XRController>{RightHand}/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHandPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e8ca6a2-35df-4b56-8f43-91bef433d5e0",
                    "path": "<XRController>{RightHand}/deviceRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHandRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "XR Controller",
            "bindingGroup": "XR Controller",
            "devices": [
                {
                    "devicePath": "<XRController>{LeftHand}",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<XRController>{RightHand}",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Mouse And Keyboard",
            "bindingGroup": "Mouse And Keyboard",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}